--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "concurrently": "^3.5.0",
     "css-loader": "^0.28.4",
+    "material-ui": "^0.20.0",
     "style-loader": "^0.18.2",
     "webpack": "^2.0.0",
     "webpack-dev-server": "^2.0.0"
