--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "concurrently": "^3.5.0",
     "css-loader": "^0.28.4",
     "material-ui": "^0.20.0",
+    "react-swipeable-views": "^0.12.12",
     "style-loader": "^0.18.2",
     "webpack": "^2.0.0",
     "webpack-dev-server": "^2.0.0"
