--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-swipeable-views": "^0.12.12",
     "redux-form": "^7.2.1",
     "style-loader": "^0.18.2",
+    "styled-components": "^3.1.4",
     "webpack": "^2.0.0",
     "webpack-dev-server": "^2.0.0"
   },
